# game-library

./: .env.example  Cargo.toml  Readme.md
migrations/: 001_initial.sql  002_add_users_and_sessions.sql  003_update_games_table.sql
src/: auth.rs  auth_handlers.rs  auth_service.rs  database.rs  handlers.rs  igdb_client.rs  main.rs  middleware.rs  models.rs  user_handlers.rs
static/: index.html
static/css/: style.css
static/js/: app.js
