[package]
name = "game-library-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
reqwest = { version = "0.12.20", features = ["json"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenvy = "0.15.7"
bcrypt = "0.17.0"
axum-macros = "0.5.0"